Changed links and file names

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <li>Legal Assistant (LEXR)</li>
   </ul>
 
-  <a href="hobbies.html">My Hobbies</a> <a href="1. Introduction to HTML.html">Web Dev Course</a> <a href="Contact Me.html">Contact Me</a>
+  <a href="hobbies.html">My Hobbies</a> <a href="course-notes.html">Web Dev Course</a> <a href="contact-me.html">Contact Me</a>
 </body>
 
 </html>
